Fix for time input shifting

--- a/src/components/Modal/ModalAddAppointment/ModalAddAppointment.css
+++ b/src/components/Modal/ModalAddAppointment/ModalAddAppointment.css
@@ -66,6 +66,10 @@
   width: 63px;
 }
 
+.modaladdappointment-time-input:focus {
+  margin-left: 3px;
+}
+
 .modaladdappointment-ampm-btns {
   margin-left: 4px;
   display: flex;
